updated CV design

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -6,37 +6,44 @@
 \newcommand{\lastname}{Mustermann}
 \newcommand{\phonenumber}{+49 123 4567 890}
 \newcommand{\dateOfBirth}{28. April 1890}
-\newcommand{\placeOfBirth}{Berlin}
-\newcommand{\email}{max.mustermann@mail.de}
-\newcommand{\github}{@chrrel}
+\newcommand{\email}{\href{mailto:max.mustermann@mail.de}{max.mustermann@mail.de}}
+\newcommand{\github}{\href{https://github.com/chrrel}{chrrel}}
 \newcommand{\address}{Musterstr. 12, 12345 Musterstadt}
 
 %----------------------------------------------------------------------------------------
 %	CONFIGURATION
 %----------------------------------------------------------------------------------------
-\documentclass[a4paper,11pt]{article}
+\documentclass[a4paper,11pt]{article} % Default font size and paper size
 \usepackage[left=0.8in,right=0.8in, top=0.5in, bottom=0.4in]{geometry}
-\usepackage{xunicode, xltxtra, parskip}
-\usepackage{ifthen}
-\usepackage{tabularx}
 
-\usepackage{fontspec}
-\defaultfontfeatures{Mapping=tex-text}
-\setmainfont[SmallCapsFont = Fontin SmallCaps]{Fontin}
-\font\fb=''[cmr10]'' % Font for \LaTeX command
-\newcommand{\latex}{{\fb \LaTeX}\setmainfont[SmallCapsFont=Fontin SmallCaps]{Fontin-Regular}}
+\usepackage{verbatim}
+\usepackage[english,ngerman]{babel}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 \usepackage{fontawesome}
+\usepackage{csquotes}
+\usepackage{framed, color}
+\usepackage{graphicx}
+\MakeOuterQuote{"}
+
+\usepackage{parskip} % Formatting packages
+
+
+\usepackage[sfdefault]{AlegreyaSans}
+
 
 \usepackage{titlesec}
 \titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule]
 \titlespacing{\section}{0pt}{3pt}{3pt}
 
-\pagestyle{empty} 
+\usepackage{ifthen}
+\usepackage{tabularx}
+\pagestyle{empty} % Removes page numbering
 
 % PDF Meta Data
 \author{\firstname \ \lastname}
-\title{\documentTitle \ - \firstname \ \lastname} 
-\usepackage[pdfusetitle]{hyperref}
+\title{\documentTitle \ \firstname \ \lastname} 
+\usepackage[pdfusetitle, hidelinks]{hyperref}
 
 %----------------------------------------------------------------------------------------
 %	COMMANDS
@@ -44,12 +51,21 @@
 \newcommand{\marginAfterItem}{13pt}
 \newcommand{\marginAfterItemShort}{5pt}
 
-% CV Section with title - Usage: \begin{cvSection}{title} ... \end{cvSection}
-\newenvironment{cvSection}[1] {
-	\section{#1} 
-	\tabularx{\textwidth}{p{3cm}X}
-} {
-	\endtabularx
+% Workplace - Usage: \workplace{Date}{Job role}{Company}{Location}{Description},  Location can be omitted.
+\newcommand{\workplace}[5] {
+	\textsc{#1} & \titlerow{#2, #3\ifthenelse{\equal{#4}{}}{}{, #4}} \\
+	& \small{#5} \\[\marginAfterItem]
+}
+
+% Awards etc. -  Usage: \award{Date}{Name of Award}{issuer}
+\newcommand{\award}[3] {
+	\textsc{#1} & #2 \footnotesize{(#3)} \\[\marginAfterItem]
+}
+
+% Activity - Usage: \activity{Date}{Job role}{Company}{Location}{Description}, Location can be omitted.
+\newcommand{\activity}[5] {
+	\textsc{#1} & \titlerow{#2 -- \textsc{#3}\ifthenelse{\equal{#4}{}}{}{, #4}} \\
+	& \small{#5} \\[\marginAfterItem]
 }
 
 % Row - \cvRow{title}{Description}
@@ -57,43 +73,70 @@
 	\textsc{#1} & #2 \\[\marginAfterItem]
 }
 
-% Workplace - Usage: \workplace{Date}{Job role}{Company}{Location}{Description},  Location can be omitted.
-\newcommand{\workplace}[5] {
-	\textsc{#1} & \textsc{#3} - #2\ifthenelse{\equal{#4}{}}{}{, #4} \\
-	& \footnotesize{#5} \\[\marginAfterItem]
-}
-
-% Awards etc. -  Usage: \award{Date}{Name of Award}{issuer}
-\newcommand{\award}[3] {
-	\textsc{#1} & #2 \footnotesize{(#3)} \\[\marginAfterItem]
-}
-   
-% Activity - Usage: \activity{Date}{Job role}{Company}{Location}{Description}, Location can be omitted.
-\newcommand{\activity}[5] {
-	\textsc{#1} & #2 - \textsc{#3}\ifthenelse{\equal{#4}{}}{}{, #4} \\
-	& \footnotesize{#5} \\[\marginAfterItem]
-}
-
 % Publication - Usage: \publication{Authors}{Year}{Title}{Type}{Institution}
 \newcommand{\publication}[5] {
 	#1 (#2). \emph{#3}. #4, #5.
 }
 
+\definecolor{light-gray}{gray}{0.95} 
+\newcommand{\skill}[1] {
+	\colorbox{light-gray}{\strut \footnotesize{#1}}
+}
+
+
+
+% CV Section with title - Usage: \begin{cvSection}{title} ... \end{cvSection}
+\newenvironment{cvSection}[1] {%
+	\section{#1} 
+	\tabularx{\textwidth}{p{3cm}X}
+} {
+	\endtabularx
+}
+
+
+\newcommand{\titlerow}[1] {
+	{\AlegreyaSansMedium #1}
+}
+
+% Education - Usage: \education{Date}{Job role}{Company}{Location}{Description},  Location can be omitted.
+\newcommand{\education}[5] {
+	\textsc{#1} & \titlerow{#2}  \\
+	& {#3} \small{(#4)} \\
+	& \ifthenelse{\equal{#5}{}}{}{\small{#5}} \\[\marginAfterItem]
+}
+
+
+% Skills
+\makeatletter
+\newcount\my@repeat@count
+\newcommand{\cvSkill}[2]{% \nolinebreak
+	\parbox[c]{7cm}{
+		\parbox[c]{3.1cm}{#1}
+		\begingroup \footnotesize
+		\my@repeat@count=\z@
+		\@whilenum\my@repeat@count<#2\do{ \faCircle\advance\my@repeat@count\@ne}%
+		\my@repeat@count=\numexpr5-\z@\relax
+		\@whilenum\my@repeat@count>#2\do{ \faCircleThin\advance\my@repeat@count\m@ne}%
+		\endgroup 
+	}
+}
+\makeatother
+
 %----------------------------------------------------------------------------------------
 %	HEADER
 %----------------------------------------------------------------------------------------
 \begin{document}
+	\renewcommand{\baselinestretch}{1.4}
+	\begin{center}
+		\huge  \textsc{\firstname \ \lastname}
+		
+		\normalsize {
+			\faCalendar \ \dateOfBirth  \ //  \faMapMarker \ \address \\ 
+			\faEnvelopeO \ \email \  // \ \faPhone \ \phonenumber \ // \  \faGithub \ \github  \ 
+		}
+	\end{center}
+	\renewcommand{\baselinestretch}{1.2}
 
-\renewcommand{\baselinestretch}{1.4}
-\begin{center}
-	\huge  \textsc{\firstname \ \lastname}
-	
-	\normalsize {
-		\faCalendar \ \dateOfBirth  \ //  \faMapMarker \ \address \\ 
-		\faEnvelope \ \email \  // \ \faPhone \ \phonenumber \ // \  \faGithub \ \github  \ 
-	}
-\end{center}
-\renewcommand{\baselinestretch}{1}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE 
@@ -137,7 +180,7 @@
 %----------------------------------------------------------------------------------------
 \begin{cvSection}{Kenntnisse}
 \cvRow{Fremdsprachen}{Latein (fließend), Chinesisch (Grundkenntnisse)}
-\cvRow{Programmierung}{\textsc{C++}, Node.js / JavaScript, Java, \latex}
+\cvRow{Programmierung}{\textsc{C++}, Node.js / JavaScript, Java}
 \end{cvSection} 
 
 %----------------------------------------------------------------------------------------
