--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -1,5 +1,8 @@
+\documentclass{cv}
+\begin{document}
+	
 %----------------------------------------------------------------------------------------
-%	DATA
+%	HEADER
 %----------------------------------------------------------------------------------------
 \newcommand{\documentTitle}{Lebenslauf}
 \newcommand{\firstname}{Max}
@@ -10,189 +13,85 @@
 \newcommand{\github}{\href{https://github.com/chrrel}{chrrel}}
 \newcommand{\address}{Musterstr. 12, 12345 Musterstadt}
 
-%----------------------------------------------------------------------------------------
-%	CONFIGURATION
-%----------------------------------------------------------------------------------------
-\documentclass[a4paper,11pt]{article} % Default font size and paper size
-\usepackage[left=0.8in,right=0.8in, top=0.5in, bottom=0.4in]{geometry}
-
-\usepackage{verbatim}
-\usepackage[english,ngerman]{babel}
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{fontawesome}
-\usepackage{csquotes}
-\usepackage{framed, color}
-\usepackage{graphicx}
-\MakeOuterQuote{"}
-
-\usepackage{parskip} % Formatting packages
-
-
-\usepackage[sfdefault]{AlegreyaSans}
-
-
-\usepackage{titlesec}
-\titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule]
-\titlespacing{\section}{0pt}{3pt}{3pt}
-
-\usepackage{ifthen}
-\usepackage{tabularx}
-\pagestyle{empty} % Removes page numbering
-
-% PDF Meta Data
-\author{\firstname \ \lastname}
-\title{\documentTitle \ \firstname \ \lastname} 
-\usepackage[pdfusetitle, hidelinks]{hyperref}
-
-%----------------------------------------------------------------------------------------
-%	COMMANDS
-%----------------------------------------------------------------------------------------
-\newcommand{\marginAfterItem}{13pt}
-\newcommand{\marginAfterItemShort}{5pt}
-
-% Workplace - Usage: \workplace{Date}{Job role}{Company}{Location}{Description},  Location can be omitted.
-\newcommand{\workplace}[5] {
-	\textsc{#1} & \titlerow{#2, #3\ifthenelse{\equal{#4}{}}{}{, #4}} \\
-	& \small{#5} \\[\marginAfterItem]
-}
-
-% Awards etc. -  Usage: \award{Date}{Name of Award}{issuer}
-\newcommand{\award}[3] {
-	\textsc{#1} & #2 \footnotesize{(#3)} \\[\marginAfterItem]
-}
-
-% Activity - Usage: \activity{Date}{Job role}{Company}{Location}{Description}, Location can be omitted.
-\newcommand{\activity}[5] {
-	\textsc{#1} & \titlerow{#2 -- \textsc{#3}\ifthenelse{\equal{#4}{}}{}{, #4}} \\
-	& \small{#5} \\[\marginAfterItem]
-}
-
-% Row - \cvRow{title}{Description}
-\newcommand{\cvRow}[2] {
-	\textsc{#1} & #2 \\[\marginAfterItem]
-}
-
-% Publication - Usage: \publication{Authors}{Year}{Title}{Type}{Institution}
-\newcommand{\publication}[5] {
-	#1 (#2). \emph{#3}. #4, #5.
-}
-
-\definecolor{light-gray}{gray}{0.95} 
-\newcommand{\skill}[1] {
-	\colorbox{light-gray}{\strut \footnotesize{#1}}
-}
-
-
-
-% CV Section with title - Usage: \begin{cvSection}{title} ... \end{cvSection}
-\newenvironment{cvSection}[1] {%
-	\section{#1} 
-	\tabularx{\textwidth}{p{3cm}X}
-} {
-	\endtabularx
-}
-
-
-\newcommand{\titlerow}[1] {
-	{\AlegreyaSansMedium #1}
-}
-
-% Education - Usage: \education{Date}{Job role}{Company}{Location}{Description},  Location can be omitted.
-\newcommand{\education}[5] {
-	\textsc{#1} & \titlerow{#2}  \\
-	& {#3} \small{(#4)} \\
-	& \ifthenelse{\equal{#5}{}}{}{\small{#5}} \\[\marginAfterItem]
-}
-
-
-% Skills
-\makeatletter
-\newcount\my@repeat@count
-\newcommand{\cvSkill}[2]{% \nolinebreak
-	\parbox[c]{7cm}{
-		\parbox[c]{3.1cm}{#1}
-		\begingroup \footnotesize
-		\my@repeat@count=\z@
-		\@whilenum\my@repeat@count<#2\do{ \faCircle\advance\my@repeat@count\@ne}%
-		\my@repeat@count=\numexpr5-\z@\relax
-		\@whilenum\my@repeat@count>#2\do{ \faCircleThin\advance\my@repeat@count\m@ne}%
-		\endgroup 
-	}
-}
-\makeatother
-
-%----------------------------------------------------------------------------------------
-%	HEADER
-%----------------------------------------------------------------------------------------
-\begin{document}
-	\renewcommand{\baselinestretch}{1.4}
-	\begin{center}
-		\huge  \textsc{\firstname \ \lastname}
-		
-		\normalsize {
-			\faCalendar \ \dateOfBirth  \ //  \faMapMarker \ \address \\ 
-			\faEnvelopeO \ \email \  // \ \faPhone \ \phonenumber \ // \  \faGithub \ \github  \ 
-		}
-	\end{center}
-	\renewcommand{\baselinestretch}{1.2}
-
-
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE 
-%----------------------------------------------------------------------------------------
-\begin{cvSection}{Berufliche Erfahrung}
-\workplace{02/2017 – heute}{Software Engineer}{Musterfirma XYZ}{}{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia, urna et convallis ultrices, urna orci malesuada ligula.}
-
-\workplace{09/2016 – 02/2017}{Security Researcher}{Test Unternehmen GmbH}{Musterstadt}{Etiam tempor fringilla lorem, laoreet dapibus neque interdum eu. Nunc porttitor lobortis sapien non condimentum. Pellentesque lobortis mauris in justo mollis, a dapibus nulla placerat. Maecenas ornare quis enim id lobortis.}
-
-\workplace{01/2015 – 09/2016}{Software Enwickler}{Muster AG}{Berlin}{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia, urna et convallis ultrices, urna orci malesuada ligula.}
-\end{cvSection}
+\maketitle
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 \begin{cvSection}{Ausbildung}
-\cvRow{10/2010 – heute}{Bachelor of Science, Informatik \small{(GPA: 1,0)} \\ &  \textsc{Musteruniversität Musterstadt}}
-\cvRow{10/2011 – 03/2012}{\textsc{University of Oxford} (UK) - Auslandssemester}
-\cvRow{08/2002 – 06/2010}{\textsc{Gymnasium Musterstadt} - Abitur \small{(Durchschnittsnote: 1,0)}}
+	\education{10/2015 -- heute}
+	{Musteruniversität Musterstadt}
+	{Mathematik, Master of Science}{1,0}
+	{Masterarbeit: "Writing a Good Thesis is Hard"}
+	
+	\education{10/2010 -- 10/2015}
+	{Musteruniversität Musterstadt}
+	{Informatik, Bachelor of Science}{1,0}
+	{Bachelorarbeit: "Analysis of Alien Life Forms and Their Relationship to Cats in Television Series"}
+	
+	\cvRow{10/2011 – 03/2012}{\titlerow{University of Oxford} (UK) - Auslandssemester}
+	\cvRow{08/2002 – 06/2010}{\titlerow{Gymnasium Musterstadt} - Abitur \small{(1,0)}}
 \end{cvSection}
 
 %----------------------------------------------------------------------------------------
-%	Voluntary Activities 
+%	WORK EXPERIENCE
 %----------------------------------------------------------------------------------------
-\begin{cvSection}{Engagement}
-\activity{09/2015 - heute}{Ehrenenamtlicher Mitarbeiter Abcde}{ABC e.V.}{Berlin}{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia.}
-\activity{07/2014}{Projektleiter}{Dies und das Projekt}{}{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia, urna et convallis ultrices, urna orci malesuada ligula.}
-\end{cvSection}
-
-%----------------------------------------------------------------------------------------
-%	SCHOLARSHIPS
-%----------------------------------------------------------------------------------------
-\begin{cvSection}{Auszeichnungen und Zertifizierungen}
-\award{03/2017}{Zertifizierung: Abcde}{scrum.org}
-\award{06/2014}{Auszeichnung für ehrenamtliches Engagement im Verein ABC}{President von A}
-\award{06/2014}{Stipendium der ABC Stiftung}{ABC e.V.}
+\begin{cvSection}{Berufliche Erfahrung}
+	\workplace{02/2017 – heute}{Software Engineer}{Musterfirma XYZ}{}{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia, urna et convallis ultrices, urna orci malesuada ligula.}
+	
+	\workplace{09/2016 – 02/2017}{Security Researcher}{Test Unternehmen GmbH}{Musterstadt}{Etiam tempor fringilla lorem, laoreet dapibus neque interdum eu. Nunc porttitor lobortis sapien non condimentum. Pellentesque lobortis mauris in justo mollis, a dapibus nulla placerat. Maecenas ornare quis enim id lobortis.}
+	
+	\workplace{01/2015 – 09/2016}{Software Enwickler}{Muster AG}{Berlin}{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia, urna et convallis ultrices, urna orci malesuada ligula.}
 \end{cvSection}
 
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
 \begin{cvSection}{Kenntnisse}
-\cvRow{Fremdsprachen}{Latein (fließend), Chinesisch (Grundkenntnisse)}
-\cvRow{Programmierung}{\textsc{C++}, Node.js / JavaScript, Java}
-\end{cvSection} 
+	\cvRow{Sprachen}{
+		\cvSkill{Deutsch}{5}
+		\cvSkill{Chinesisch}{5} 
+		\cvSkill{Latein}{4}
+		\cvSkill{Französisch}{1}	
+	}
 
-%----------------------------------------------------------------------------------------
-%	INTERESTS
-%----------------------------------------------------------------------------------------
-\begin{cvSection}{Forschungsinteressen und Veröffentlichungen}
-\cvRow{Interessen}{Automatentheorie und Formale Sprachen \\[\marginAfterItemShort] & Cloud Computing}
+	\cvRow{XYZ}{
+		\cvSkill{Test}{5}
+		\cvSkill{Tool}{3}
+		\cvSkill{Programm}{4}
+		\cvSkill{Abcde}{4}
+	}
 
-\textsc{Aktuell} & \publication{Mustermann, Max}{vsl. 09/2017}{Very Interesting Thesis Topic}{Bachelorarbeit}{Musteruniversität Musterstadt} \\[\marginAfterItem]
+	\cvRow{Programmierung}{
+		\cvSkill{Python}{4} 
+		\cvSkill{Java}{1} 
+		\cvSkill{PHP}{2} 
+		\cvSkill{C++}{4}
+	}
 
-\textsc{Abgeschlossen} & \publication{Mustermann, Max}{2011}{Design and Implementation of a Very Cool Software}{Studienarbeit}{Musteruniversität Musterstadt} \\[\marginAfterItemShort]
-& \publication{Mustermann, Max}{2010}{Eine tolle Arbeit mit einem deutschem Titel}{Unveröffentlichte Studienarbeit}{Musteruniversität Musterstadt} \\[\marginAfterItemShort]
+	\cvRow{Betriebssysteme}{
+		\cvSkill{Linux}{5} 
+		\cvSkill{Windows}{4} 
+	}
 \end{cvSection}
+
+%----------------------------------------------------------------------------------------
+%	Voluntary Activities 
+%----------------------------------------------------------------------------------------
+\begin{cvSection}{Engagement}
+	\activity{09/2015 - heute}{Ehrenenamtlicher Mitarbeiter Abcde}{ABC e.V.}{Berlin}{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia.}
+	\activity{07/2014}{Projektleiter}{Dies und das Projekt}{}{Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia, urna et convallis ultrices, urna orci malesuada ligula.}
+\end{cvSection}
+
+%----------------------------------------------------------------------------------------
+%	SCHOLARSHIPS
+%----------------------------------------------------------------------------------------
+\begin{cvSection}{Auszeichnungen und Zertifizierungen}
+	\award{03/2007}{Zertifizierung: Abcde}{scrum.org}
+	\award{06/2007}{Auszeichnung für ehrenamtliches Engagement im Verein ABC}{President von A}
+	\award{06/2007}{Stipendium der ABC Stiftung}{ABC e.V.}
+\end{cvSection}
+
+\signature{signature.png}{Musterstadt, \today}
 
 \end{document}
